# learn_coin

./: .gitignore  Cargo.toml  LICENSE  README.md  build_all.sh
bchain/: Cargo.toml  todo_list.md
bchain/src/: bchain_error.rs  block.rs  blockchain.rs  lib.rs  mempool.rs  message.rs  transaction.rs  wallets.rs
bchain/src/chain/: mod.rs
bchain/src/config/: config_utils.rs  mod.rs  static_config.rs
bchain/src/contracts/: mod.rs
bchain/src/contracts/host/: debug.rs  get_balance.rs  load.rs  mod.rs  stake.rs  store.rs  transfer.rs  unstake.rs
bchain/src/patricia_merkle_trie/: mod.rs  pmt_proof.rs  state_root.rs
bchain/src/primitives/: block.rs  mod.rs  opcodes_language.rs  transaction.rs  wallet.rs
bchain/src/validators/: mod.rs
bchain/src/wallets/: mod.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/protocols/: mod.rs  peer_handshake.rs
docs/diagrams/: handshake.puml
learncoin-contract/: Cargo.toml
learncoin-contract/src/: lib.rs
learncoin-contracts/: Cargo.toml
learncoin-contracts/src/: lib.rs
network/: Cargo.toml  README.md  todo_list.md
network/src/: lib.rs  main.rs  message.rs
network/src/comm/: events.rs  mod.rs  net_message.rs  p2p_connection.rs
network/src/node/: connection.rs  listener.rs  manager.rs  mod.rs  peer.rs
network/src/protocols/: mod.rs  peer_handshake.rs  peer_listener.rs
network/src/utils/: error.rs
src/: main.rs
