[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
network = {path = "../network"}
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "^0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }


[lints.rust]
dead_code = "allow"

