[package]
name = "network"
version = "0.1.0"
edition = "2021"

[lib]
name = "network"
path = "src/lib.rs"

[dependencies]
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
